--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "customize-cra": "^1.0.0",
     "ethers": "^5.4.4",
     "framer-motion": "4.1.17",
+    "moment": "^2.29.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
